--- a/style.css
+++ b/style.css
@@ -54,11 +54,11 @@ header {
     margin-right: -2em;
 }
 
-.navbar-brand {
-    position: absolute; 
-    margin:0px; auto; 
-    width: 100%;
-    text-align:center;
+#logo {
+    position: absolute;  
+    width: 20%;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
 #home {
