--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header {
 
 #logo {
     position: absolute;  
-    width: 20%;
+    width: 80px;
     left: 50%;
     transform: translateX(-50%);
 }
