--- a/style.css
+++ b/style.css
@@ -91,8 +91,18 @@ header {
 
 #training {
     background-color: gray;
-    height: 300px;
+    height: 600px;
     grid-area: training;
+}
+
+#training h1 {
+    padding-top: 1em;
+    padding-bottom: 0.5em;
+    color: #27335f;
+}
+
+#training h2 {
+    padding-bottom: 0.5em;
 }
 
 #apport {
