--- a/style.css
+++ b/style.css
@@ -69,8 +69,17 @@ header {
 
 #softbites {
     background-color: green;
-    height: 300px;
+    height: 100%;
     grid-area: produkt;
+}
+
+#fordele {
+    list-style: disc;
+    margin-left: 2em;
+}
+
+.godepointer {
+    padding-bottom: 0.8em;
 }
 
 #relaterede {
