--- a/style.css
+++ b/style.css
@@ -105,8 +105,14 @@ header {
 
 #trivsel {
     background-color: yellow;
-    height: 300px;
+    height: 700px ;
     grid-area: trivsel;
+}
+
+#trivsel h2 {
+    color: #27335f;
+    padding-top: 1em;
+    padding-bottom: 0.5em;
 }
 
 footer {
