--- a/style.css
+++ b/style.css
@@ -107,12 +107,23 @@ header {
     background-color: yellow;
     height: 700px ;
     grid-area: trivsel;
+    background-image: url(frame.png);
+    background-repeat: no-repeat;
+    background-size: 420px 800px;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 #trivsel h2 {
     color: #27335f;
-    padding-top: 1em;
+    padding-top: 2em;
     padding-bottom: 0.5em;
+    text-align: center;
+    font-size: 1.2em;
+}
+
+#trivsel p {
+    margin-top: 0.6em;
 }
 
 footer {
@@ -151,6 +162,11 @@ footer {
             "apport"
             "trivsel"
             "footer";
+    }
+    #trivsel {
+        background-image: url(frame.png);
+        background-repeat: no-repeat;
+        background-size: cover;
     }
 }
 
