--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ blockquote:before, blockquote:after, q:before, q:after {
     background-color: greenyellow;
     height: 100px;
     grid-area: relaterede;
+    margin-left: -52px;
+    margin-right: -52px;
 }
 
 .training {
@@ -63,6 +65,8 @@ blockquote:before, blockquote:after, q:before, q:after {
     background-color: pink;
     height: 300px;
     grid-area: apport;
+    margin-left: -52px;
+    margin-right: -52px;
 }
 
 .trivsel {
@@ -78,6 +82,20 @@ footer {
 }
 
 
+/* Borders til sectionerne */
+#whiteborder {
+    border: 8px solid white;
+    margin-right: 40px;
+    margin-left: 40px;
+}
+
+#turkisborder {
+    border: 4px solid #75C6AB;
+}
+
+
+
+
 
 /* GRID(S) TIL MOBILE */
 #pagewrap {
@@ -86,6 +104,7 @@ footer {
         "globalmenu"
         "home"
         "produkt"
+        "relaterede"
         "training"
         "apport"
         "trivsel"
@@ -102,10 +121,26 @@ footer {
             "globalmenu"
             "home"
             "produkt"
+            "relaterede"
             "training"
             "apport"
             "trivsel"
             "footer";
+    }
+    
+    #whiteborder {
+        margin-right: 60px;
+        margin-left: 60px;
+    }
+    
+    #relaterede {
+        margin-right: -72px;
+        margin-left: -72px;
+    }
+    
+    #apport {
+        margin-right: -72px;
+        margin-left: -72px;
     }
 }
 
@@ -120,9 +155,25 @@ footer {
             "globalmenu"
             "home"
             "produkt"
+            "relaterede"
             "training"
             "apport"
             "trivsel"
             "footer";
+    }
+    
+    #whiteborder {
+        margin-right: 70px;
+        margin-left: 70px;
+    }
+    
+    #relaterede {
+        margin-right: -82px;
+        margin-left: -82px;
+    }
+    
+    #apport {
+        margin-right: -82px;
+        margin-left: -82px;
     }
 }
