--- a/style.css
+++ b/style.css
@@ -102,10 +102,14 @@ header {
 
 #apport {
     background-color: pink;
-    height: 300px;
+    height: auto;
     grid-area: apport;
     margin-left: -52px;
     margin-right: -52px;
+}
+
+#howtosit {
+    margin-left: 2em;
 }
 
 #trivsel {
