--- a/style.css
+++ b/style.css
@@ -81,14 +81,18 @@ header {
     grid-area: produkt;
     padding-left: 2em;
     padding-right: 2em;
+    margin-top: 1.3em;
+    background-image: url(framemobile.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #relaterede {
     background-color: greenyellow;
     height: 100px;
     grid-area: relaterede;
-    margin-left: -2em;
-    margin-right: -2em;
+    margin-left: -4em;
+    margin-right: -4em;
 }
 
 #training {
@@ -97,6 +101,9 @@ header {
     grid-area: training;
     padding-left: 2em;
     padding-right: 2em;
+    background-image: url(framemobile.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #apport {
@@ -109,10 +116,13 @@ header {
 
 #trivsel {
     background-color: yellow;
-    height: 300px;
+    height: 700px;
     grid-area: trivsel;
     padding-left: 2em;
     padding-right: 2em;
+    background-image: url(framemobile.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #trivsel h2 {
@@ -163,6 +173,25 @@ footer {
             "apport"
             "trivsel"
             "footer";
+}
+    
+#softbites {
+    background-image: url(frameframe.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#training {
+    background-image: url(frameframe.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+    
+#trivsel {
+    background-image: url(frameframe.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
     }
 
 /* GRID(S) TIL DESKTOP */
