--- a/style.css
+++ b/style.css
@@ -66,9 +66,13 @@ header {
 }
 
 #home {
-    background-color: blue;
-    height: 300px;
+    background-image: url(forsidemobil.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 665px;
+    width: 100%;
     grid-area: home;
+
 }
 
 #softbites {
