--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ header {
     position: fixed;
     margin-right: -2em;
     margin-left: -2em;
+    z-index: 1;
 }
 
 .navbar button {
@@ -117,12 +118,12 @@ header {
 }
 
 #apport {
-    background-image: url(puppy-sit.jpg);
+    background-image: url(header_teach_sit.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: left;
+    background-position: center;
     color: white;
-    height: 350px;
+    height: 680px;
     grid-area: apport;
     margin-right: -2em;
     margin-left: -2em; 
@@ -130,8 +131,10 @@ header {
 
 #tekstguide {
     position: absolute;
-    width: 50%;
-    left: 48%;
+    width: 100%;
+    height: auto;
+    transform: translateY(20%);
+    padding: 1em;
 }
 
 #howtosit {
@@ -184,7 +187,7 @@ footer {
 
 
 /* GRID(S) TIL TABLET */
-@media screen and (min-width: 720px) {
+@media screen and (min-width: 768px) {
         #pagewrap {
         grid-template-columns: 1fr;
         grid-template-areas: 
@@ -196,40 +199,33 @@ footer {
             "trivsel"
             "footer";
     }
-  
-    /*
-    #relaterede {
-        margin-right: -72px;
-        margin-left: -72px;
-    }
-    
-    #apport {
-        margin-right: -72px;
-        margin-left: -72px;
-    }
-    
-    #whiteborder {
-        margin-right: 70px;
-        margin-left: 70px;
-    }
-    */
     
     #softbites {
     background-image: url(frameframe1.png);
     background-repeat: no-repeat;
     background-size: cover;
+    }
+
+    #training {
+    background-image: url(frameframe1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+    
+    #trivsel {
+    background-image: url(frameframe1.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    }
+    
+#apport {
+    height: 800px;
 }
 
-#training {
-    background-image: url(frameframe1.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-    
-#trivsel {
-    background-image: url(frameframe1.png);
-    background-repeat: no-repeat;
-    background-size: cover;
+#tekstguide {
+    transform: translateY(40%);
+    width: 40%;
+    padding-left: 2em;
 }
     
 }
@@ -248,22 +244,13 @@ footer {
             "trivsel"
             "footer";
     }
-    /*
     #apport {
-        margin-right: -82px;
-        margin-left: -82px;
+        height: 600px;
     }
-    
-    
-    #relaterede {
-        margin-right: -82px;
-        margin-left: -82px;
+
+    #tekstguide {
+        transform: translateY(20%);
+        width: 35%;
     }
-    
-    #whiteborder {
-        margin-right: 70px;
-        margin-left: 70px;
-    }
-    */
     
 }
