--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ html {
 }
 
 
-/* Styling */
+/* Styling generelt */
 body {
     background-image: url(big%20boy%20paws1.png);
     margin-left: 2em;
