--- a/style.css
+++ b/style.css
@@ -336,8 +336,8 @@ footer {
     grid-gap: 1em;
     grid-template-columns: 1fr 1fr;
     grid-template-areas: 
-        "minkobmand meny"
-        "spar letkob"
+        "minkobmand spar"
+        "meny letkob"
 }
 
 
@@ -419,6 +419,42 @@ footer {
     #mixed {
         width: 60%;
     }
+    
+    #softbites {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+            "softbitetekst softbitetekst"
+            "fordele pose"
+            "fordel pose"
+            "buynow buynow"
+            "grocery grocery";
+    }
+    
+    .tekstsoftbites h1{
+        text-align: center;
+    }
+    
+    .tekstsoftbites {
+        width: 50%;
+        transform: translateX(50%);
+        padding-bottom: 2em;
+    }
+    
+    #fordelecontainer {
+        transform: translateX(30%)
+    }
+    
+    #buynow {
+        margin-left: 20em;
+        margin-right: 20em;
+        height: 60px;
+    }
+    
+    #grocerycontainer {
+        width: 80%;
+        transform: translateX(12%);
+    }
 }
 
 
@@ -467,4 +503,43 @@ footer {
         width: 50%;
     }
     
+    #softbites {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+            "softbitetekst softbitetekst"
+            "fordele pose"
+            "fordel pose"
+            "buynow buynow"
+            "grocery grocery";
+    }
+    
+    .tekstsoftbites h1{
+        text-align: center;
+    }
+    
+    .tekstsoftbites {
+        width: 50%;
+        transform: translateX(50%);
+        padding-bottom: 2em;
+    }
+    
+    #fordelecontainer {
+        transform: translateX(30%)
+    }
+    
+    #buynow {
+        margin-left: 30em;
+        margin-right: 30em;
+        height: 60px;
+    }
+    
+    #softbitespose {
+        transform: translateX(30%);
+    }
+    
+    #grocerycontainer {
+        width: 50%;
+        transform: translateX(50%);
+    }
 }
