--- a/style.css
+++ b/style.css
@@ -107,46 +107,9 @@ header {
     grid-area: produkt;
     padding-right: 2em;
     padding-left: 2em;
-    padding-bottom: 1em;
     background-image: url(framemobile1.png);
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-#softbites h1 {
-    text-align: center;
-}
-
-#softbitespose {
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 80%;
-    height: auto;
-}
-
-#buynow {
-    margin-top: 1em;
-    margin-bottom: 1em;
-    color: black;
-    background-color: orange;
-    border: 2px solid black;
-    font-weight: 500;
-    width: 150px;
-    height: 60px;
-}
-
-#buynow {
-    position: relative;
-    left: 100%;
-    transform: translateX(-50%);
-}
-
-#buynow:active {
-    background-color: white;
-    color: orange;
-    border: 4px solid orange;
-    font-weight: 800;
 }
 
 #fordele {
@@ -158,95 +121,23 @@ header {
     padding-bottom: 0.8em;
 }
 
-#grocery {
-    display: inline-flex;
-    list-style: none;
-    width: 70%;
-    position: relative;
-    left: 50%;
-    transform: translateX(-50%);
-    
-}
-
-#grocerycontainer h3 {
-    text-align: center;
-    margin-bottom: 0.4em;
-}
-
-#minkomandimg {
-    width: 100%;
-}
-
-#sparimg {
-    width: 100%;
-}
-
-#menyimg {
-   width: 100%; 
-}
-
-#letkobimg {
-   width: 100%; 
-}
-
 #relaterede {
-    text-align: center;
-    background-image: url(bgrelaterede.png);
-    background-size: contain;
-    height: auto;
+    background-color: #FBFBFB;
+    height: 100px;
     grid-area: relaterede;
     margin-right: -2em;
     margin-left: -2em;
-}
-
-#relaterede h2 {
-    margin-bottom: 0.5em;
-    padding-top: 0.5em;
-}
-
-.produkterne {
-    list-style: none;
-    display: inline-flex;
-}
-
-#denta {
-    width: 60%;
-}
-
-#denta:active {
-    width: 65%;
-}
-
-#mixed {
-    width: 60%;
-}
-
-#mixed:active {
-    width: 65%;
-}
-
-#strips {
-    width: 60%;
-}
-
-#strips:active {
-    width: 65%;
 }
 
 #training {
     background-color: #FBFBFB;
     height: auto;
     grid-area: training;
-    padding-top: 1em;
     padding-right: 2em;
     padding-left: 2em;
     background-image: url(framemobile1.png);
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-#training h1 {
-    text-align: center;
 }
 
 #apport {
@@ -320,6 +211,7 @@ footer {
     margin-left: -7em
 }
 
+
 /* GRIDS TIL SEKTIONER */
 #hundehighfive {
     max-width: 100%;
@@ -350,62 +242,6 @@ footer {
              
 }
 
-#softbitespose {
-    grid-area: pose;
-}
-
-.tekstsoftbites {
-    grid-area: softbitetekst;
-}
-
-#fordelecontainer {
-    grid-area: fordele;
-}
-
-#buynow {
-    grid-area: buynow;
-}
-
-#grocerycontainer {
-    grid-area: grocery;
-}
-
-#softbites {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: 
-        "softbitetekst softbitetekst"
-        "fordele fordele"
-        "pose pose"
-        "buynow buynow"
-        "grocery grocery";
-}
-
-#minkobmand {
-    grid-area: minkobmand;
-}
-
-#spar {
-    grid-area: spar;
-}
-
-#meny {
-    grid-area: meny;
-}
-
-#letkob {
-    grid-area: letkob;
-}
-
-#grocery {
-    display: grid;
-    grid-gap: 1em;
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: 
-        "minkobmand spar"
-        "meny letkob"
-}
-
 
 /* GRID(S) TIL MOBILE */
 #pagewrap {
@@ -429,7 +265,6 @@ footer {
             "globalmenu"
             "home"
             "produkt"
-            "relaterede"
             "training"
             "apport"
             "trivsel"
@@ -468,11 +303,6 @@ footer {
     padding-left: 2em;
 }
 
-    #containertrivsel {
-        grid-area: teksttrivsel;
-        padding-left: 1em;
-        padding-right: 1em;
-=======
     
 #containertrivsel {
     grid-area: teksttrivsel;
@@ -482,12 +312,6 @@ footer {
     
     #hundehighfive {
         padding-right: 1em;
-
-    }
-    
-    #trivsel {
-        padding-top: 2em;
-        padding-bottom: 2em;
     }
     
 #trivsel {
@@ -496,83 +320,6 @@ footer {
     grid-template-areas:
         "teksttrivsel hundeogejer";          
 }
-    
-    #denta {
-    width: 45%;
-    }
-
-    #denta:active {
-        width: 50%;
-    }
-
-    #mixed {
-        width: 45%;
-    }
-
-    #mixed:active {
-        width: 50%;
-    }
-
-    #strips {
-        width: 45%;
-    }
-
-    #strips:active {
-        width: 50%;
-    }
-    
-    #relaterede {
-        height: 100%;
-    }
-    
-    #softbites {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: 
-            "softbitetekst softbitetekst"
-            "fordele pose"
-            "fordel pose"
-            "buynow buynow"
-            "grocery grocery";
-    }
-    
-    .tekstsoftbites h1{
-        text-align: center;
-    }
-    
-    .tekstsoftbites {
-        position: relative;
-        width: 90%;
-        left: 50%;
-        transform: translateX(-50%);
-        padding-bottom: 1em;
-    }
-    
-    #fordelecontainer {
-        position: relative;
-        transform: translateX(-40%);
-        left: 50%;
-    }
-    
-    #buynow {
-        height: 60px;
-        position: relative;
-        transform: translateX(-50%);
-    }
-    
-    #grocerycontainer {
-        width: 80%;
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-        
-    }
-    
-    #softbitespose {
-        max-width:  width: 100%;
-        height: auto;
-    }
-    
     
 }
 
@@ -616,100 +363,9 @@ footer {
         "teksttrivsel hundeogejer";          
 }
     
-
-    #denta {
-    width: 50%;
-    }
-
-    #denta:hover {
-        width: 55%;
-    }
-
-    #mixed {
-        width: 50%;
-    }
-
-    #mixed:hover {
-        width: 55%;
-    }
-
-    #strips {
-        width: 50%;
-    }
-
-    #strips:hover {
-        width: 55%;
-    }
-    
-    #relaterede {
-        max-height: 100%;
-    }
-    
-    #softbites {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: 
-            "softbitetekst softbitetekst"
-            "fordele pose"
-            "fordel pose"
-            "buynow buynow"
-            "grocery grocery";
-    }
-    
-    .tekstsoftbites h1{
-        text-align: center;
-        font-size: 80px;
-    }
-    
-    .tekstsoftbites {
-        position: relative;
-        width: 95%;
-        transform: translateX(-50%);
-        padding-bottom: 1em;
-        font-size: 25px;
-    }
-    
-    #fordelecontainer {
-        position: relative;
-        left: 50%;
-        transform: translateX(-30%);
-        font-size: 25px;
-    }
-    
-    #buynow {
-        height: 100px;
-        width: 40%;
-        position: relative;
-        left: 50%;
-        font-size: 25px;
-        transform: translateX(-30%);
-    }
-    
-    #buynow:hover {
-        background-color: white;
-        border: 4px solid orange;
-        color: orange;
-    }
-    
-    #softbitespose {
-        position: relative;
-        left: 50%;
-        transform: translateX(-60%);
-        max-width: 100%;
-        height: auto;
-    }
-    
-    #grocerycontainer {
-        width: 50%;
-        position: relative;
-        left: 50%;
-        transform: translateX(-50%);
-    }
-=======
     #containertrivsel {
         padding-left: 4em;
         padding-right: 1em;
     }
     
-
 }
